Build minimal JRE with jlink to reduce image size